--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -20,8 +20,7 @@ This Scenario plays out over 13 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Pack of cheapest \bronze\ Units
-  \item A Few chosen \bronze\ Units
+  \item A Pack of chosen \bronze\ Units
 \end{itemize}
 
 \textbf{Town Buildings:}
@@ -38,8 +37,8 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 \begin{itemize}
   \item P × Starting (I) Map Tile
   \item 2P × Near (IV–V) Map Tiles
-  \item P × Center (VI–VII) Map Tile
   \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
+  \item P × Center (VI–VII) Map Tile
 \end{itemize}
 
 \columnbreak
@@ -81,7 +80,7 @@ If no one controls a Dragon Utopia, all players lose.
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item \textbf{Grail Token}: When a player gains or starts their turn with it, they gain +1 \svg{morale_positive} and Search (4) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may pick up the Grail Token.
+  \item \textbf{Grail Token}: When a player gains or starts their turn with The Grail Token, they gain +1 \svg{morale_positive} and Search (4) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may pick up the Grail Token.
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svg{movement} for the next Round.
   \item After winning a Combat against another player's Main Hero, draw up to your Hand Limit and discard 1 Card.
@@ -90,7 +89,7 @@ If no one controls a Dragon Utopia, all players lose.
   \item Upon flagging a \textbf{Dragon Utopia}, choose one option and then put a Black Cube:
   \begin{itemize}
     \item Gain 5 \svg{gold} and sacrifice any number of Units, then recruit one of the defeated dragons at a discount equal to the total recruitment cost of the sacrificed Units (to a minimum of 0).
-    \item Gain 15 \svg{gold} and Search (3) \svg{spellpower} or \svg{artifact}.
+    \item Gain 20 \svg{gold} and Search (3) \svg{spellpower} or (3) \svg{artifact}.
   \end{itemize}
 \end{itemize}
 
