--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -13,7 +13,7 @@ This Scenario plays out over 15 Rounds.
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 -- 6
 
-\textbf{Starting Resources:} 16 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
@@ -21,6 +21,7 @@ This Scenario plays out over 15 Rounds.
 
 \begin{itemize}
   \item A Pack of chosen \bronze\ Units
+  \item A chosen Neutral \bronze\ Unit of the player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:}
@@ -52,8 +53,8 @@ The game ends when any of the following conditions are met:
 If no player has achieved an immediate victory, the player with the most Victory Points (VP) wins.
 
 \begin{itemize}
-  \item 5 VPs for the first player to flag the Center VII Field.
-  \item 3 VPs for each enemy Main Hero defeated.
+  \item 4 VPs for the first player to flag the Center VII Field.
+  \item 2 VPs for each enemy Main Hero defeated.
   \item 1 VP for each flagged Obelisk.
 \end{itemize}
 
@@ -101,7 +102,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero.
   \item A defeated Main Hero may Empower one Defense Statistic Card from their M\&M Deck.
   \item \textbf{Level VII Settlement:} Increase all incomes by 1 space.
-  \item \textbf{Random Town:} You may recruit one Faction Unit you defeated for its recruitment cost.
+  \item \textbf{Random Town:} You may recruit one Faction Unit you defeated for half its recruitment cost or increase all incomes by one space.
   \item \textbf{Dragon Utopia:} You may recruit one dragon you defeated for half of its recruitment cost.
   \item \textbf{11-Round game:} Remove P × Near (IV-V) Map Tiles and replace the Center (VI-VII) Tile with a Near (IV-V) Map Tile without an Obelisk.
 \end{itemize}
