--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -13,20 +13,19 @@ This Scenario plays out over 14 Rounds.
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 3-6P FFA, 2v2v2 alliance.
 
-\textbf{Starting Resources:} 14 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:} 10 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 
 \begin{itemize}
-  %\item 1 × Pack of cheapest \bronze\ Units
-  \item 1 × Chosen Neutral \bronze\ Unit of the closest starting player's Faction
+  \item 2 × chosen Neutral \bronze\ Units from the closest starting player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item \bronze\ Dwelling
+  \item Citadel
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -34,7 +33,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \begin{itemize}
   \item 6 × Starting (I) Map Tiles
-  \item 2 × Far (II-III) Map Tiles for each player
+  \item 3 × Far (II-III) Map Tiles for each player
   \item 12 × Near (IV-V) Map Tiles
   \item 3 × Center (VI-VII) Map Tiles
 \end{itemize}
@@ -42,17 +41,17 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \subsection*{\MakeUppercase{Victory Conditions}}
 The game ends when any of the following conditions are met:
 \begin{itemize}
-  \item One player has defeated each other player's Main Hero once. \textit{That player wins the game immediately}
+  \item One player has defeated each other player's Main Hero once. \textit{That player wins the game immediately.}
   \item At the end of Round 14.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Points}}
-If no player has achieved immediate victory, the player with the most Victory Points (VPs) wins. Players gain:
+If no player has achieved immediate victory, the player with the most Victory Points (VPs) wins. Players gain VPs as follows:
 \begin{itemize}
+  \item 3 VP for winning a Level VII Combat
   \item 2 VP for defeating the closest starting player's Main Hero
   \item 1 VP for defeating another player's Main Hero
-  \item 1 VP for the Grail Token
-  \item 1 VP for winning a Level VII Combat
+  \item 1 VP for possessing the Grail Token
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
@@ -66,13 +65,13 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \end{itemize}
 \textbf{\nth{7} Round:}
 \begin{itemize}
-  \item Each player may recruit one Neutral \silver\ Unit of the their closest starting player's Faction for half its recruitment cost.
+  \item Each player may recruit one Neutral \silver\ Unit from their closest starting player's Faction for half its recruitment cost.
 \end{itemize}
 \textbf{\nth{10} Round:}
 \begin{itemize}
-  \item Repeat event of Round 5.
+  \item Repeat the event of Round 5.
 \end{itemize}
-\textbf{\nth{12} Round:}
+\textbf{\nth{11} Round:}
 \begin{itemize}
   \item Each player may recruit one Neutral \silver\ Unit of the their closest starting player's Faction for half its recruitment cost.
 \end{itemize}
@@ -81,8 +80,8 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \begin{itemize}
   \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Choose 1 \svg{artifact} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
-  \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up).
-  \item \textbf{Random Town:} On next Resource Round, you may recruit one Unit from the defending Faction for free.
+  \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up). Trading Post conversion may be used for this.
+  \item \textbf{Random Town:} On the next Resource Round, you may recruit one Unit from the defending Faction for free.
   \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase all incomes by one space.
   \item Level VII Neutral Combats cannot be skipped.
 \end{itemize}
@@ -97,10 +96,10 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \columnbreak
 
 \begin{itemize}
-  \item \textbf{Grail Token:} If you start your turn with the Grail Token, gain \svg{morale_positive}, 10 \svg{gold} and 2 \svg{valuables}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
+  \item \textbf{Grail Token:} If you start your turn with the Grail Token, gain \svg{morale_positive}, 10 \svg{gold}, and 2 \svg{valuables}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
   \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
   \item A defeated Main Hero may Empower one Statistic Card from their Deck of M\&M.
-  \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
+  \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town. Increase 2 different incomes by one space.
   \item Flagging a Neutral Starting Town increases two separate incomes by 1 space.
   \item When a Hero moves to a Starting Town, that Hero gains +1 \svg{movement}.
 \end{itemize}
