small changes + alt layout change

--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -49,8 +49,8 @@ The game ends when any of the following conditions are met:
 \subsection*{\MakeUppercase{Victory Points}}
 If no player has achieved immediate victory, the player with the most Victory Points (VPs) wins. Players gain:
 \begin{itemize}
-  \item 2 VP for defeating the closest starting player's Main Hero
-  \item 1 VP for defeating another player's Main Hero
+  \item 2 VP for defeating the closest starting player's Main Hero \textit{Once per Faction.}
+  \item 1 VP for defeating another player's Main Hero {One per enemy.}
   \item 1 VP for the Grail Token
   \item 1 VP for winning a Level VII Combat
 \end{itemize}
@@ -97,7 +97,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \columnbreak
 
 \begin{itemize}
-  \item \textbf{Grail Token:} If you start your turn with the Grail Token, gain \svg{morale_positive}, 10 \svg{gold} and 2 \svg{valuables}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
+  \item \textbf{Grail Token:} When you gain the Grail Token, draw up to your hand limit. If you start your turn with the Grail Token, gain \svg{morale_positive}, 10 \svg{gold}, and 2 \svg{valuables}. If a Hero carrying the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
   \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
   \item A defeated Main Hero may Empower one Statistic Card from their Deck of M\&M.
   \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
@@ -108,7 +108,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \vspace*{\fill}
 
 \begin{center}
-  \includegraphics[width=1.0\linewidth]{\maps/shattered_alliance_alt-6p.png}
+  \includegraphics[width=1.05\linewidth]{\maps/shattered_alliance_alt-6p.png}
   \captionof{figure}{\textbf{ALTERNATIVE MAP LAYOUT}}
   \vspace*{\fill}
 \end{center}
