--- a/draft-scenarios/clash/blood_for_ore.tex
+++ b/draft-scenarios/clash/blood_for_ore.tex
@@ -13,7 +13,7 @@ This Scenario plays out over 8-10 Rounds.
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 4
 
-\textbf{Starting Resources:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:} 10 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Income:} 15 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
@@ -24,7 +24,7 @@ This Scenario plays out over 8-10 Rounds.
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item \bronze\ Dwelling
+  \item Mage Guild
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
