--- a/sections/feedback_page.tex
+++ b/sections/feedback_page.tex
@@ -1,11 +1,15 @@
 % !TeX spellcheck = en_US
-\clearpage
 
-All scenarios are created by hobbyists in their free time, for hobbyists just as yourself.
-Did you enjoy this scenario?
+\addsection{Got any feedback?}{\images/orb_of_the_firmament.png}
+
+\vspace{\baselineskip}
+We hope you enjoyed this scenario.  % no-check-caps
+It was created by hobbyists in their free time, for hobbyists just as yourself.
+Did you enjoy playing it?
 Was there anything that could be improved?
 The authors would really appreciate your feedback.
-Please reach out using one of the mediums below:
+Please reach out using one of the mediums below.
+Cheers!
 
 \begin{multicols}{2}
   \bigbreak
@@ -22,5 +26,5 @@ Please reach out using one of the mediums below:
 
 \vfill
 \begin{center}
-  \transparent{0.2}{\includegraphics[width=0.45\linewidth, keepaspectratio]{\art/mirth.png}}
+  \transparent{0.2}{\includegraphics[width=0.3\linewidth, keepaspectratio]{\art/mirth.png}}
 \end{center}
