--- a/sections/feedback_page.tex
+++ b/sections/feedback_page.tex
@@ -1,6 +1,6 @@
 % !TeX spellcheck = en_US
 
-\addsection{Got any feedback?}{\images/orb_of_the_firmament.png}
+\addsection{Got any feedback?}{\art/mirth.png}
 
 \vspace{\baselineskip}
 We hope you enjoyed this scenario.  % no-check-caps
