--- a/sections/feedback_page.tex
+++ b/sections/feedback_page.tex
@@ -4,11 +4,11 @@
 
 \vspace{\baselineskip}
 We hope you enjoyed this scenario.  % no-check-caps
-It was created by hobbyists in their free time, for hobbyists just as yourself.
+It was created by hobbyists in their free time, for hobbyists just like yourself.
 Did you enjoy playing it?
 Was there anything that could be improved?
 The authors would really appreciate your feedback.
-Please reach out using one of the mediums below.
+Please reach out using one of the channels below.
 Cheers!
 
 \begin{multicols}{2}
