--- a/translations/feedback_page.tex/de.po
+++ b/translations/feedback_page.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-09-30 01:09+0200\n"
+"POT-Creation-Date: 2025-09-30 01:20+0200\n"
 "PO-Revision-Date: 2025-09-30 01:09+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -28,9 +28,9 @@ msgstr "\\addsection{Notizen}{\\images/intelligence.png}"
 #: sections/feedback_page.tex:13
 msgid ""
 "We hope you enjoyed this scenario.  It was created by hobbyists in their "
-"free time, for hobbyists just as yourself.  Did you enjoy playing it? Was "
+"free time, for hobbyists just like yourself.  Did you enjoy playing it? Was "
 "there anything that could be improved? The authors would really appreciate "
-"your feedback.  Please reach out using one of the mediums below.  Cheers!"
+"your feedback.  Please reach out using one of the channels below.  Cheers!"
 msgstr ""
 
 #. type: multicols
