--- a/translations/feedback_page.tex/feedback_page.tex.pot
+++ b/translations/feedback_page.tex/feedback_page.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-09-30 01:09+0200\n"
+"POT-Creation-Date: 2025-09-30 01:20+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -26,9 +26,9 @@ msgstr ""
 #: sections/feedback_page.tex:13
 msgid ""
 "We hope you enjoyed this scenario.  It was created by hobbyists in their "
-"free time, for hobbyists just as yourself.  Did you enjoy playing it? Was "
+"free time, for hobbyists just like yourself.  Did you enjoy playing it? Was "
 "there anything that could be improved? The authors would really appreciate "
-"your feedback.  Please reach out using one of the mediums below.  Cheers!"
+"your feedback.  Please reach out using one of the channels below.  Cheers!"
 msgstr ""
 
 #. type: multicols
