--- a/translations/feedback_page.tex/pl.po
+++ b/translations/feedback_page.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-09-30 01:09+0200\n"
+"POT-Creation-Date: 2025-09-30 01:20+0200\n"
 "PO-Revision-Date: 2025-09-30 01:09+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -27,14 +27,14 @@ msgstr "\\addsection{Informacja zwrotna}{\\images/orb_of_the_firmament.png}"
 #: sections/feedback_page.tex:13
 msgid ""
 "We hope you enjoyed this scenario.  It was created by hobbyists in their "
-"free time, for hobbyists just as yourself.  Did you enjoy playing it? Was "
+"free time, for hobbyists just like yourself.  Did you enjoy playing it? Was "
 "there anything that could be improved? The authors would really appreciate "
-"your feedback.  Please reach out using one of the mediums below.  Cheers!"
+"your feedback.  Please reach out using one of the channels below.  Cheers!"
 msgstr ""
-"Mamy nadzieję, że scenariusz się podobał. Był zrobiony w wolnym casie przez "
-"pasjonatów takich jak ty. Dobrze się grało? A może warto coś zmienić? "
-"Autorzy byliby wdzięczni za informację zwrotną. Możesz ją zostawić w jednym "
-"z mediów poniżej. Trzymaj się!"
+"Mamy nadzieję, że scenariusz się podobał. Był zrobiony przez pasjonatów w "
+"ich wolnym czasie, dla pasjonatów takich jak ty. Dobrze się grało? A może "
+"warto coś zmienić? Autorzy byliby wdzięczni za informację zwrotną. Możesz ją "
+"zostawić w jednym z mediów poniżej. Trzymaj się!"
 
 #. type: multicols
 #: sections/feedback_page.tex:20
@@ -65,6 +65,10 @@ msgid ""
 "  \\qrgithub \\\\\n"
 "  \\href{\\repourl}{\\repourl}"
 msgstr ""
+"  \\columnbreak\n"
+"  \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+"  \\qrgithub \\\\\n"
+"  \\href{\\repourl}{\\repourl}"
 
 #. type: center
 #: sections/feedback_page.tex:30
