Make intro translatable

--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -775,7 +775,7 @@ msgstr ""
 "sprawiających ustawiczne kłopoty potworach. Wiedza ta zawiera się zresztą "
 "raczej w opowiastkach niż księgach magicznych. Niektórzy twierdzą, że "
 "Czarodziejskie Smoki są niewidzialne. Inni — że ich naturalnych środkiem "
-"obronnym jest Magiczne Zwierciadło.} \\medskip \\\\ \\textbf{Walka ze "
+"obronnym jest Magiczne Zwierciadło.} \\medskip \\\\ \\textbf{Walka z "
 "Czarodziejskim Smokiem:} \\begin{enumerate} \\item Umieść na Polu bitwy 2 "
 "karty Czarodziejskich Smoków. Zignoruj ich zdolności. \\item Umieść na "
 "planszy Drzewca z Talii \\svg{silver} Jednostek Neutralnych i dodatkowo 3 "
