--- a/translations/title_page.tex/pl.po
+++ b/translations/title_page.tex/pl.po
@@ -8,16 +8,14 @@ msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-07-05 00:39+0200\n"
 "PO-Revision-Date: 2024-11-01 11:08+0000\n"
-"Last-Translator: krazanas <krazi321@gmail.com>\n"
-"Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
-"mission-book/sections/scenarios/pl/>\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Generator: Weblate 5.8.2-dev\n"
 
 #.  !TeX spellcheck = en_US
 #. type: tikzpicture
@@ -70,4 +68,4 @@ msgstr ""
 "{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
 "\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
 "{\\svgs/attack-yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense-"
-"yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-yellow.svg} }"
+"yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-yellow.svg} } "
