--- a/sections/feedback_page.tex
+++ b/sections/feedback_page.tex
@@ -20,7 +20,7 @@ Cheers!
 
   \columnbreak
   \includegraphics[width=0.8\linewidth]{\qr/github.png} \\
-  \qrgithub \\
+  Scan to open \textbf{GitHub} repository. \\
   \href{\repourl}{\repourl}
 \end{multicols}
 
