--- a/translations/intro_and_toc.tex/de.po
+++ b/translations/intro_and_toc.tex/de.po
@@ -19,7 +19,6 @@ msgstr ""
 #. type: center
 #: sections/credits.tex:8 sections/intro_and_toc.tex:16
 #: sections/intro_and_toc.tex:21
-#, fuzzy
 msgid "\\bigbreak"
 msgstr "\\bigbreak"
 
@@ -27,12 +26,12 @@ msgstr "\\bigbreak"
 #. type: title{#1}
 #: sections/intro_and_toc.tex:3
 msgid "Fan-Made Mission Book"
-msgstr ""
+msgstr "Von Fans erstelltes Missionsheft"
 
 #. type: author{#1}
 #: sections/intro_and_toc.tex:6
 msgid "By The Community"
-msgstr ""
+msgstr "Von der Gemeinschaft"
 
 #. type: center
 #: sections/intro_and_toc.tex:14
@@ -42,6 +41,9 @@ msgid ""
 "\\hrefwithoutfootnote{\\repourl}{\\StrLeft{\\githubsha}{7}}.  }{ Version "
 "\\input{.version} }"
 msgstr ""
+"\\iftoggle{githubbuild}{ \\getenv[\\githubsha]{GITHUB_SHA} Dies ist eine unveröffentlichte Version auf GitHub "
+"\\hrefwithoutfootnote{\\repourl}{\\StrLeft{\\githubsha}{7}}.  }{ Version "
+"\\input{.version} }"
 
 #. type: center
 #: sections/intro_and_toc.tex:19
@@ -50,6 +52,8 @@ msgid ""
 "\\hrefwithoutfootnote{\\repourl}{GitHub repository}.  Everyone is welcome to "
 "contribute Scenarios, make changes, and fix errors."
 msgstr ""
+"Dies ist ein Gemeinschaftsprojekt, erreichbar über \\hrefwithoutfootnote{\\repourl}{GitHub repository}. "
+"Jeder ist dazu eingeladen sich zu beteiligen, Veränderungen vorzunehmen und Fehler zu korrigieren."
 
 #. type: multicols
 #: sections/intro_and_toc.tex:28
@@ -74,6 +78,11 @@ msgid ""
 "    \\href{\\repourl}{\\repourl}\n"
 "  "
 msgstr ""
+"    \\columnbreak\n"
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+"    Link zum \\textbf{GitHub} Verzeichnis. \\\\\n"
+"    \\href{\\repourl}{\\repourl}\n"
+"  "
 
 #. type: Plain text
 #: sections/intro_and_toc.tex:47
@@ -83,15 +92,14 @@ msgid ""
 "{\\includegraphics[width=\\paperwidth,height=\\paperheight]{\\layout/"
 "tausta.png}} } }"
 msgstr ""
+"\\iftoggle{noartbackground}{}{ \\AddToHookNext{shipout/background}{ \\put "
+"(0in,-\\paperheight)"
+"{\\includegraphics[width=\\paperwidth,height=\\paperheight]{\\layout/"
+"tausta.png}} } }"
 
 #. type: tikzpicture
 #: sections/intro_and_toc.tex:47
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[remember picture, overlay]\n"
-#| "  \\node(bg)[anchor=center, opacity=0.07] at (current page.center) {\n"
-#| "    \\includegraphics[width=\\paperwidth, keepaspectratio]{\\art/hellstorm_helmet.png}\n"
-#| "  };"
+#, no-wrap
 msgid ""
 "[remember picture, overlay]\n"
 "  \\node(cover)[anchor=center, yshift=9em] at (current page.south) {\n"
@@ -99,8 +107,8 @@ msgid ""
 "  };"
 msgstr ""
 "[remember picture, overlay]\n"
-"  \\node(bg)[anchor=center, opacity=0.07] at (current page.center) {\n"
-"    \\includegraphics[width=\\paperwidth, keepaspectratio]{\\art/hellstorm_helmet.png}\n"
+"  \\node(cover)[anchor=center, yshift=9em] at (current page.south) {\n"
+"    \\includegraphics[width=1.01\\paperwidth, keepaspectratio]{\\layout/rampart_background.png}\n"
 "  };"
 
 #. type: multicols*
@@ -115,3 +123,10 @@ msgid ""
 "\\includegraphics[width=\\linewidth]{\\art/elf.jpg}\n"
 "\n"
 msgstr ""
+"{2}\n"
+"\\tableofcontents\n"
+"\\vspace*{\\fill}\n"
+"\\columnbreak\n"
+"\\vspace{-3em}\n"
+"\\includegraphics[width=\\linewidth]{\\art/elf.jpg}\n"
+"\n"
