--- a/translations/feedback_page.tex/cs.po
+++ b/translations/feedback_page.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-09-30 01:20+0200\n"
+"POT-Creation-Date: 2025-09-30 14:34+0200\n"
 "PO-Revision-Date: 2025-09-30 01:09+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -48,13 +48,24 @@ msgstr ""
 
 #. type: multicols
 #: sections/feedback_page.tex:25
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "    \\columnbreak\n"
+#| "    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+#| "    Scan to open \\textbf{GitHub} repository. \\\\\n"
+#| "    \\href{\\repourl}{\\repourl}\n"
+#| "  "
 msgid ""
 "  \\columnbreak\n"
 "  \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-"  \\qrgithub \\\\\n"
+"  Scan to open \\textbf{GitHub} repository. \\\\\n"
 "  \\href{\\repourl}{\\repourl}"
 msgstr ""
+"    \\columnbreak\n"
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+"    Naskenuj pro otevření \\textbf{GitHub} repozitáře. \\\\\n"
+"    \\href{\\repourl}{\\repourl}\n"
+"  "
 
 #. type: center
 #: sections/feedback_page.tex:30
