--- a/translations/feedback_page.tex/feedback_page.tex.pot
+++ b/translations/feedback_page.tex/feedback_page.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-09-30 01:20+0200\n"
+"POT-Creation-Date: 2025-09-30 14:34+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -50,7 +50,7 @@ msgstr ""
 msgid ""
 "  \\columnbreak\n"
 "  \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-"  \\qrgithub \\\\\n"
+"  Scan to open \\textbf{GitHub} repository. \\\\\n"
 "  \\href{\\repourl}{\\repourl}"
 msgstr ""
 
