--- a/translations/feedback_page.tex/pl.po
+++ b/translations/feedback_page.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-09-30 01:20+0200\n"
+"POT-Creation-Date: 2025-09-30 14:34+0200\n"
 "PO-Revision-Date: 2025-09-30 01:09+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -62,13 +62,14 @@ msgstr ""
 msgid ""
 "  \\columnbreak\n"
 "  \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-"  \\qrgithub \\\\\n"
+"  Scan to open \\textbf{GitHub} repository. \\\\\n"
 "  \\href{\\repourl}{\\repourl}"
 msgstr ""
-"  \\columnbreak\n"
-"  \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-"  \\qrgithub \\\\\n"
-"  \\href{\\repourl}{\\repourl}"
+"    \\columnbreak\n"
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+"    Skanuj, aby otworzyć repozytorium na \\textbf{GitHubie}. \\\\\n"
+"    \\href{\\repourl}{\\repourl}\n"
+"  "
 
 #. type: center
 #: sections/feedback_page.tex:30
