--- a/translations/intro_and_toc.tex/cs.po
+++ b/translations/intro_and_toc.tex/cs.po
@@ -41,7 +41,8 @@ msgid ""
 "\\hrefwithoutfootnote{\\repourl}{\\StrLeft{\\githubsha}{7}}.  }{ Version "
 "\\input{.version} }"
 msgstr ""
-"\\iftoggle{githubbuild}{ \\getenv[\\githubsha]{GITHUB_SHA} Toto je nepublikovaná verze vyrobená z GitHub commitu "
+"\\iftoggle{githubbuild}{ \\getenv[\\githubsha]{GITHUB_SHA} Toto je "
+"nepublikovaná verze vyrobená z GitHub commitu "
 "\\hrefwithoutfootnote{\\repourl}{\\StrLeft{\\githubsha}{7}}.  }{ Verze "
 "\\input{.version} }"
 
@@ -52,8 +53,9 @@ msgid ""
 "\\hrefwithoutfootnote{\\repourl}{GitHub repository}.  Everyone is welcome to "
 "contribute Scenarios, make changes, and fix errors."
 msgstr ""
-"Toto je komunitní projekt, který má \\hrefwithoutfootnote{\\repourl}{GitHub repozitář}. "
-"Všichni jsou vítáni, aby přispívali novými scénáři, prováděli změny a opravovali chyby."
+"Toto je komunitní projekt, který má \\hrefwithoutfootnote{\\repourl}{GitHub "
+"repozitář}. Všichni jsou vítáni, aby přispívali novými scénáři, prováděli "
+"změny a opravovali chyby."
 
 #. type: multicols
 #: sections/intro_and_toc.tex:28
