--- a/translations/intro_and_toc.tex/de.po
+++ b/translations/intro_and_toc.tex/de.po
@@ -41,9 +41,9 @@ msgid ""
 "\\hrefwithoutfootnote{\\repourl}{\\StrLeft{\\githubsha}{7}}.  }{ Version "
 "\\input{.version} }"
 msgstr ""
-"\\iftoggle{githubbuild}{ \\getenv[\\githubsha]{GITHUB_SHA} Dies ist eine unveröffentlichte Version auf GitHub "
-"\\hrefwithoutfootnote{\\repourl}{\\StrLeft{\\githubsha}{7}}.  }{ Version "
-"\\input{.version} }"
+"\\iftoggle{githubbuild}{ \\getenv[\\githubsha]{GITHUB_SHA} Dies ist eine "
+"unveröffentlichte Version auf GitHub \\hrefwithoutfootnote{\\repourl}"
+"{\\StrLeft{\\githubsha}{7}}.  }{ Version \\input{.version} }"
 
 #. type: center
 #: sections/intro_and_toc.tex:19
@@ -52,8 +52,10 @@ msgid ""
 "\\hrefwithoutfootnote{\\repourl}{GitHub repository}.  Everyone is welcome to "
 "contribute Scenarios, make changes, and fix errors."
 msgstr ""
-"Dies ist ein Gemeinschaftsprojekt, erreichbar über \\hrefwithoutfootnote{\\repourl}{GitHub repository}. "
-"Jeder ist dazu eingeladen sich zu beteiligen, Veränderungen vorzunehmen und Fehler zu korrigieren."
+"Dies ist ein Gemeinschaftsprojekt, erreichbar über "
+"\\hrefwithoutfootnote{\\repourl}{GitHub repository}. Jeder ist dazu "
+"eingeladen sich zu beteiligen, Veränderungen vorzunehmen und Fehler zu "
+"korrigieren."
 
 #. type: multicols
 #: sections/intro_and_toc.tex:28
