--- a/translations/intro_and_toc.tex/pl.po
+++ b/translations/intro_and_toc.tex/pl.po
@@ -42,7 +42,8 @@ msgid ""
 "\\hrefwithoutfootnote{\\repourl}{\\StrLeft{\\githubsha}{7}}.  }{ Version "
 "\\input{.version} }"
 msgstr ""
-"\\iftoggle{githubbuild}{ \\getenv[\\githubsha]{GITHUB_SHA} To jest nieopublikowana wersja zbudowana na GitHubie z commita "
+"\\iftoggle{githubbuild}{ \\getenv[\\githubsha]{GITHUB_SHA} To jest "
+"nieopublikowana wersja zbudowana na GitHubie z commita "
 "\\hrefwithoutfootnote{\\repourl}{\\StrLeft{\\githubsha}{7}}.  }{ Wersja "
 "\\input{.version} }"
 
@@ -53,8 +54,9 @@ msgid ""
 "\\hrefwithoutfootnote{\\repourl}{GitHub repository}.  Everyone is welcome to "
 "contribute Scenarios, make changes, and fix errors."
 msgstr ""
-"Niniejszy projekt jest tworzony przez społeczność oraz ma swoje \\hrefwithoutfootnote{\\repourl}{repozytorium na GitHubie}. "
-"Dodawanie nowych scenariuszy, wprowadzanie zmian oraz poprawki są mile widziane."
+"Niniejszy projekt jest tworzony przez społeczność oraz ma swoje "
+"\\hrefwithoutfootnote{\\repourl}{repozytorium na GitHubie}. Dodawanie nowych "
+"scenariuszy, wprowadzanie zmian oraz poprawki są mile widziane."
 
 #. type: multicols
 #: sections/intro_and_toc.tex:28
