Use feedback form link and QR code

--- a/metadata.tex
+++ b/metadata.tex
@@ -115,6 +115,7 @@
 
 \def\repourl{https://github.com/qwrtln/Homm3BG-mission-book}
 \def\discordurl{https://discord.gg/nMbawQkj9R}
+\def\formurl{https://docs.google.com/forms/d/e/1FAIpQLSceRQ8iWucXIyB_2GsCm0_du6rq_wU8iKay2R1dedJ0q7XPVw/viewform}
 
 \newcommand{\svg}[2][10]{%
   \iftoggle{noartbackground}{%
