--- a/translations/feedback_page.tex/cs.po
+++ b/translations/feedback_page.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-09-30 14:34+0200\n"
+"POT-Creation-Date: 2025-10-06 09:47+0000\n"
 "PO-Revision-Date: 2025-09-30 01:09+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -35,16 +35,27 @@ msgstr ""
 
 #. type: multicols
 #: sections/feedback_page.tex:20
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "    \\columnbreak\n"
+#| "    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+#| "    Scan to open \\textbf{GitHub} repository. \\\\\n"
+#| "    \\href{\\repourl}{\\repourl}\n"
+#| "  "
 msgid ""
 "{2}\n"
 "  \\bigbreak\n"
 "  \\centering\n"
-"  \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
-"  Scan to join the Heroes III Board Game community \\textbf{Discord} server.\\\\\n"
-"  \\href{\\discordurl}{\\discordurl}\n"
+"  \\includegraphics[width=0.8\\linewidth]{\\qr/form.png} \\\\\n"
+"  Scan to open a \\textbf{feedback form}.\\\\\n"
+"  \\href{\\formurl}{https://docs.google.com/forms/...}\n"
 "\n"
 msgstr ""
+"    \\columnbreak\n"
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+"    Naskenuj pro otevření \\textbf{GitHub} repozitáře. \\\\\n"
+"    \\href{\\repourl}{\\repourl}\n"
+"  "
 
 #. type: multicols
 #: sections/feedback_page.tex:25
@@ -57,9 +68,9 @@ msgstr ""
 #| "  "
 msgid ""
 "  \\columnbreak\n"
-"  \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-"  Scan to open \\textbf{GitHub} repository. \\\\\n"
-"  \\href{\\repourl}{\\repourl}"
+"  \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
+"  Scan to join the Heroes III Board Game community \\textbf{Discord} server.\\\\\n"
+"  \\href{\\discordurl}{\\discordurl}"
 msgstr ""
 "    \\columnbreak\n"
 "    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
