--- a/translations/feedback_page.tex/feedback_page.tex.pot
+++ b/translations/feedback_page.tex/feedback_page.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-09-30 14:34+0200\n"
+"POT-Creation-Date: 2025-10-06 09:47+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -38,9 +38,9 @@ msgid ""
 "{2}\n"
 "  \\bigbreak\n"
 "  \\centering\n"
-"  \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
-"  Scan to join the Heroes III Board Game community \\textbf{Discord} server.\\\\\n"
-"  \\href{\\discordurl}{\\discordurl}\n"
+"  \\includegraphics[width=0.8\\linewidth]{\\qr/form.png} \\\\\n"
+"  Scan to open a \\textbf{feedback form}.\\\\\n"
+"  \\href{\\formurl}{https://docs.google.com/forms/...}\n"
 "\n"
 msgstr ""
 
@@ -49,9 +49,9 @@ msgstr ""
 #, no-wrap
 msgid ""
 "  \\columnbreak\n"
-"  \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-"  Scan to open \\textbf{GitHub} repository. \\\\\n"
-"  \\href{\\repourl}{\\repourl}"
+"  \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
+"  Scan to join the Heroes III Board Game community \\textbf{Discord} server.\\\\\n"
+"  \\href{\\discordurl}{\\discordurl}"
 msgstr ""
 
 #. type: center
