--- a/translations/feedback_page.tex/pl.po
+++ b/translations/feedback_page.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-09-30 14:34+0200\n"
+"POT-Creation-Date: 2025-10-06 09:47+0000\n"
 "PO-Revision-Date: 2025-09-30 01:09+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -43,17 +43,17 @@ msgid ""
 "{2}\n"
 "  \\bigbreak\n"
 "  \\centering\n"
-"  \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
-"  Scan to join the Heroes III Board Game community \\textbf{Discord} server.\\\\\n"
-"  \\href{\\discordurl}{\\discordurl}\n"
+"  \\includegraphics[width=0.8\\linewidth]{\\qr/form.png} \\\\\n"
+"  Scan to open a \\textbf{feedback form}.\\\\\n"
+"  \\href{\\formurl}{https://docs.google.com/forms/...}\n"
 "\n"
 msgstr ""
 "{2}\n"
 "  \\bigbreak\n"
 "  \\centering\n"
-"  \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
-"  Skanuj, aby dołaczyć do serwera \\textbf{Discord} społeczności Heroes III Board Game.\\\\\n"
-"  \\href{\\discordurl}{\\discordurl}\n"
+"  \\includegraphics[width=0.8\\linewidth]{\\qr/form.png} \\\\\n"
+"  Skanuj, aby przejść do \\textbf{formularza oceny}.\\\\\n"
+"  \\href{\\formurl}{https://docs.google.com/forms/...}\n"
 "\n"
 
 #. type: multicols
@@ -61,15 +61,14 @@ msgstr ""
 #, no-wrap
 msgid ""
 "  \\columnbreak\n"
-"  \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-"  Scan to open \\textbf{GitHub} repository. \\\\\n"
-"  \\href{\\repourl}{\\repourl}"
+"  \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
+"  Scan to join the Heroes III Board Game community \\textbf{Discord} server.\\\\\n"
+"  \\href{\\discordurl}{\\discordurl}"
 msgstr ""
-"    \\columnbreak\n"
-"    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
-"    Skanuj, aby otworzyć repozytorium na \\textbf{GitHubie}. \\\\\n"
-"    \\href{\\repourl}{\\repourl}\n"
-"  "
+"  \\columnbreak\n"
+"  \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
+"  Skanuj, aby dołaczyć do serwera \\textbf{Discord} społeczności Heroes III Board Game.\\\\\n"
+"  \\href{\\discordurl}{\\discordurl}"
 
 #. type: center
 #: sections/feedback_page.tex:30
