--- a/sections/feedback_page.tex
+++ b/sections/feedback_page.tex
@@ -14,14 +14,14 @@ Cheers!
 \begin{multicols}{2}
   \bigbreak
   \centering
+  \includegraphics[width=0.8\linewidth]{\qr/form.png} \\
+  Scan to open a \textbf{feedback form}.\\
+  \href{\formurl}{https://docs.google.com/forms/...}
+
+  \columnbreak
   \includegraphics[width=0.8\linewidth]{\qr/discord.png}\\
   Scan to join the Heroes III Board Game community \textbf{Discord} server.\\
   \href{\discordurl}{\discordurl}
-
-  \columnbreak
-  \includegraphics[width=0.8\linewidth]{\qr/github.png} \\
-  Scan to open \textbf{GitHub} repository. \\
-  \href{\repourl}{\repourl}
 \end{multicols}
 
 \vfill
