--- a/translations/intro_and_toc.tex/de.po
+++ b/translations/intro_and_toc.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-09-30 13:50+0200\n"
+"POT-Creation-Date: 2025-10-06 10:06+0000\n"
 "PO-Revision-Date: 2025-09-30 13:50+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -58,20 +58,60 @@ msgstr ""
 "korrigieren."
 
 #. type: multicols
-#: sections/intro_and_toc.tex:28
+#: sections/intro_and_toc.tex:25
 #, no-wrap
 msgid ""
-"{2}\n"
+"{3}\n"
 "    \\bigbreak\n"
 "    \\centering\n"
+"\n"
+msgstr ""
+
+#. type: multicols
+#: sections/intro_and_toc.tex:29
+#, fuzzy, no-wrap
+#| msgid ""
+#| "    \\columnbreak\n"
+#| "    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+#| "    Scan to open \\textbf{GitHub} repository. \\\\\n"
+#| "    \\href{\\repourl}{\\repourl}\n"
+#| "  "
+msgid ""
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/form.png} \\\\\n"
+"    Scan to open Scenario \\textbf{feedback form}.\\\\\n"
+"    \\href{\\formurl}{https://docs.google.com/forms/...}\n"
+"\n"
+msgstr ""
+"    \\columnbreak\n"
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+"    Link zum \\textbf{GitHub} Verzeichnis. \\\\\n"
+"    \\href{\\repourl}{\\repourl}\n"
+"  "
+
+#. type: multicols
+#: sections/intro_and_toc.tex:34
+#, fuzzy, no-wrap
+#| msgid ""
+#| "    \\columnbreak\n"
+#| "    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+#| "    Scan to open \\textbf{GitHub} repository. \\\\\n"
+#| "    \\href{\\repourl}{\\repourl}\n"
+#| "  "
+msgid ""
+"    \\columnbreak\n"
 "    \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
 "    Scan to join the Heroes III Board Game community \\textbf{Discord} server.\\\\\n"
 "    \\href{\\discordurl}{\\discordurl}\n"
 "\n"
 msgstr ""
+"    \\columnbreak\n"
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/github.png} \\\\\n"
+"    Link zum \\textbf{GitHub} Verzeichnis. \\\\\n"
+"    \\href{\\repourl}{\\repourl}\n"
+"  "
 
 #. type: multicols
-#: sections/intro_and_toc.tex:33
+#: sections/intro_and_toc.tex:39
 #, no-wrap
 msgid ""
 "    \\columnbreak\n"
@@ -87,7 +127,7 @@ msgstr ""
 "  "
 
 #. type: Plain text
-#: sections/intro_and_toc.tex:47
+#: sections/intro_and_toc.tex:53
 msgid ""
 "\\iftoggle{noartbackground}{}{ \\AddToHookNext{shipout/background}{ \\put "
 "(0in,-\\paperheight)"
@@ -100,7 +140,7 @@ msgstr ""
 "tausta.png}} } }"
 
 #. type: tikzpicture
-#: sections/intro_and_toc.tex:47
+#: sections/intro_and_toc.tex:53
 #, no-wrap
 msgid ""
 "[remember picture, overlay]\n"
@@ -114,7 +154,7 @@ msgstr ""
 "  };"
 
 #. type: multicols*
-#: sections/intro_and_toc.tex:55
+#: sections/intro_and_toc.tex:61
 #, no-wrap
 msgid ""
 "{2}\n"
