--- a/translations/intro_and_toc.tex/pl.po
+++ b/translations/intro_and_toc.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-09-30 13:50+0200\n"
+"POT-Creation-Date: 2025-10-06 10:06+0000\n"
 "PO-Revision-Date: 2025-09-30 13:50+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -59,27 +59,51 @@ msgstr ""
 "scenariuszy, wprowadzanie zmian oraz poprawki są mile widziane."
 
 #. type: multicols
-#: sections/intro_and_toc.tex:28
+#: sections/intro_and_toc.tex:25
 #, no-wrap
 msgid ""
-"{2}\n"
+"{3}\n"
 "    \\bigbreak\n"
 "    \\centering\n"
+"\n"
+msgstr ""
+"{3}\n"
+"    \\bigbreak\n"
+"    \\centering\n"
+"\n"
+
+#. type: multicols
+#: sections/intro_and_toc.tex:29
+#, no-wrap
+msgid ""
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/form.png} \\\\\n"
+"    Scan to open Scenario \\textbf{feedback form}.\\\\\n"
+"    \\href{\\formurl}{https://docs.google.com/forms/...}\n"
+"\n"
+msgstr ""
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/form.png} \\\\\n"
+"    Skanuj, aby przejść do \\textbf{formularza oceny} Scenariuszy.\\\\\n"
+"    \\href{\\formurl}{https://docs.google.com/forms/...}\n"
+"\n"
+
+#. type: multicols
+#: sections/intro_and_toc.tex:34
+#, no-wrap
+msgid ""
+"    \\columnbreak\n"
 "    \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
 "    Scan to join the Heroes III Board Game community \\textbf{Discord} server.\\\\\n"
 "    \\href{\\discordurl}{\\discordurl}\n"
 "\n"
 msgstr ""
-"{2}\n"
-"  \\bigbreak\n"
-"  \\centering\n"
-"  \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
-"  Skanuj, aby dołaczyć do serwera \\textbf{Discord} społeczności Heroes III Board Game.\\\\\n"
-"  \\href{\\discordurl}{\\discordurl}\n"
+"    \\columnbreak\n"
+"    \\includegraphics[width=0.8\\linewidth]{\\qr/discord.png}\\\\\n"
+"    Skanuj, aby dołaczyć do serwera \\textbf{Discord} społeczności Heroes III Board Game.\\\\\n"
+"    \\href{\\discordurl}{\\discordurl}\n"
 "\n"
 
 #. type: multicols
-#: sections/intro_and_toc.tex:33
+#: sections/intro_and_toc.tex:39
 #, no-wrap
 msgid ""
 "    \\columnbreak\n"
@@ -95,7 +119,7 @@ msgstr ""
 "  "
 
 #. type: Plain text
-#: sections/intro_and_toc.tex:47
+#: sections/intro_and_toc.tex:53
 msgid ""
 "\\iftoggle{noartbackground}{}{ \\AddToHookNext{shipout/background}{ \\put "
 "(0in,-\\paperheight)"
@@ -108,7 +132,7 @@ msgstr ""
 "tausta.png}} } }"
 
 #. type: tikzpicture
-#: sections/intro_and_toc.tex:47
+#: sections/intro_and_toc.tex:53
 #, no-wrap
 msgid ""
 "[remember picture, overlay]\n"
@@ -122,7 +146,7 @@ msgstr ""
 "  };"
 
 #. type: multicols*
-#: sections/intro_and_toc.tex:55
+#: sections/intro_and_toc.tex:61
 #, no-wrap
 msgid ""
 "{2}\n"
